CSS: Fix spacing between paragraphs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,7 @@ html {
 .content-area > p + p,
 .content-area > aside + p,
 .content-area > figure + p {
-  @apply mt-8;
+  @apply mt-4;
 }
 
 .content-area > h3 {
